--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.primefaces-3.0.M1.jar=/home/carlos/primefaces-3.0.M1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -40,8 +41,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
-    ${reference.Loja-ejb.dist}
+    ${reference.Loja-ejb.dist}:\
+    ${file.reference.primefaces-3.0.M1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
