--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -27,7 +27,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.primefaces-3.0.M1.jar=/home/carlos/primefaces-3.0.M1.jar
+file.reference.commons-io-2.0.1.jar=web/WEB-INF/lib/commons-io-2.0.1.jar
+file.reference.NetBeansProjects-Loja-WEB=./
+file.reference.primefaces-3.0.M1.jar=web/WEB-INF/lib/primefaces-3.0.M1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -42,6 +44,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${reference.Loja-ejb.dist}:\
+    ${file.reference.NetBeansProjects-Loja-WEB}:\
+    ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.primefaces-3.0.M1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
