mudei sei la'o que tudo.

--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -43,10 +43,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.Loja-ejb.dist}:\
     ${file.reference.NetBeansProjects-Loja-WEB}:\
     ${file.reference.commons-io-2.0.1.jar}:\
-    ${file.reference.primefaces-3.0.M1.jar}
+    ${file.reference.primefaces-3.0.M1.jar}:\
+    ${reference.Loja-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
