--- a/Loja/nbproject/project.properties
+++ b/Loja/nbproject/project.properties
@@ -13,7 +13,7 @@ j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6
-j2ee.platform.classpath=
+j2ee.platform.classpath=${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/jaxrpc-api-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/jsf-api.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jsf-impl.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.servlet.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/jstl-impl.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.jacc.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
@@ -23,8 +23,6 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
     ${reference.Loja-ejb.dist-ear}:\
-    ${reference.Loja_WEB.dist-ear}:\
-    ${reference.Loja_WEB.dist-ear}:\
     ${reference.Loja-WEB.dist-ear}
 jar.name=Loja.ear
 javac.debug=true
@@ -36,9 +34,8 @@ no.dependencies=false
 platform.active=default_platform
 project.Loja-ejb=Loja-ejb
 project.Loja-WEB=../Loja-WEB
-project.Loja_WEB=../Loja_WEB
 reference.Loja-ejb.dist-ear=${project.Loja-ejb}/dist/Loja-ejb.jar
 reference.Loja-WEB.dist-ear=${project.Loja-WEB}/dist/Loja-WEB.war
-reference.Loja_WEB.dist-ear=${project.Loja_WEB}/dist/Loja_WEB.war
 resource.dir=setup
+run.classpath=
 source.root=.
