mudando a categoria para um bean... dando uns paus loucos no salvar produto. HELL

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /Loja/Loja-ejb/dist/
 /Loja/Loja-ejb/nbproject/private/
 /Loja/nbproject/private/
+/Loja-WEB/dist/
+/Loja/build/
+/Loja-EJB/nbproject/private/
+/Loja-EJB/Loja-EJB-war/nbproject/private/
+/Loja-EJB/Loja-EJB-ejb/nbproject/private/
+/Loja/dist/
