--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.2.2.jar=web/WEB-INF/lib/commons-fileupload-1.2.2.jar
 file.reference.commons-io-2.0.1.jar=web/WEB-INF/lib/commons-io-2.0.1.jar
 file.reference.NetBeansProjects-Loja-WEB=./
 file.reference.primefaces-3.0.M1.jar=web/WEB-INF/lib/primefaces-3.0.M1.jar
@@ -45,6 +46,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.NetBeansProjects-Loja-WEB}:\
     ${file.reference.commons-io-2.0.1.jar}:\
+    ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.primefaces-3.0.M1.jar}:\
     ${reference.Loja-ejb.dist}
 # Space-separated list of extra javac options
@@ -73,7 +75,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.Loja-ejb=../Loja/Loja-ejb
