--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -30,6 +30,7 @@ file.reference.commons-fileupload-1.2.2.jar=web/WEB-INF/lib/commons-fileupload-1
 file.reference.commons-io-2.0.1.jar=web/WEB-INF/lib/commons-io-2.0.1.jar
 file.reference.NetBeansProjects-Loja-WEB=./
 file.reference.primefaces-3.0.M1.jar=web/WEB-INF/lib/primefaces-3.0.M1.jar
+file.reference.primefaces-3.0.M2-SNAPSHOT.jar=web/WEB-INF/lib/primefaces-3.0.M2-SNAPSHOT.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -47,6 +48,7 @@ javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.primefaces-3.0.M1.jar}:\
+    ${file.reference.primefaces-3.0.M2-SNAPSHOT.jar}:\
     ${reference.Loja-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
