--- a/Loja-WEB/web/WEB-INF/web.xml
+++ b/Loja-WEB/web/WEB-INF/web.xml
@@ -21,12 +21,42 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>LojaJaas</realm-name>
+    </login-config>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>paginas admnistrativas</web-resource-name>
+            <url-pattern>/paginas/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin-role</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>paginas para usuários</web-resource-name>
+            <url-pattern>/users/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>user-role</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>paginas para visitantes</web-resource-name>
+            <url-pattern>/public/*</url-pattern>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>guest-role</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
