--- a/Loja-WEB/web/WEB-INF/web.xml
+++ b/Loja-WEB/web/WEB-INF/web.xml
@@ -34,7 +34,7 @@
             <url-pattern>/paginas/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
-            <role-name>admin-role</role-name>
+            <role-name>user-role</role-name>
         </auth-constraint>
     </security-constraint>
     <security-constraint>
@@ -55,8 +55,8 @@
             <http-method>GET</http-method>
             <http-method>POST</http-method>
         </web-resource-collection>
-        <auth-constraint>
+<!--        <auth-constraint>
             <role-name>guest-role</role-name>
-        </auth-constraint>
+        </auth-constraint>-->
     </security-constraint>
 </web-app>
