--- a/Loja-WEB/nbproject/project.properties
+++ b/Loja-WEB/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
@@ -47,6 +48,7 @@ javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.commons-fileupload-1.2.2.jar}:\
     ${file.reference.primefaces-3.0.M1.jar}:\
+    ${libs.primefaces.classpath}:\
     ${reference.Loja-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
