--- a/Loja-WEB/web/WEB-INF/web.xml
+++ b/Loja-WEB/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
-        <param-value>Development</param-value>
+        <param-value>Production</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -24,7 +24,7 @@
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
-    <login-config>
+<!--    <login-config>
         <auth-method>BASIC</auth-method>
         <realm-name>LojaJaas</realm-name>
     </login-config>
@@ -54,9 +54,9 @@
             <url-pattern>/public/*</url-pattern>
             <http-method>GET</http-method>
             <http-method>POST</http-method>
-        </web-resource-collection>
+        </web-resource-collection>-->
 <!--        <auth-constraint>
             <role-name>guest-role</role-name>
         </auth-constraint>-->
-    </security-constraint>
+<!--    </security-constraint>-->
 </web-app>
